--- a/MVC/4/CouchBaseResearch/CouchBaseResearch/CouchBaseResearch.csproj
+++ b/MVC/4/CouchBaseResearch/CouchBaseResearch/CouchBaseResearch.csproj
@@ -46,6 +46,9 @@
       <HintPath>..\packages\CouchbaseNetClient.1.3.3\lib\net40\Enyim.Caching.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
