--- a/MVC/4/CouchBaseResearch/CouchBaseResearch.Tests/CouchBaseResearch.Tests.csproj
+++ b/MVC/4/CouchBaseResearch/CouchBaseResearch.Tests/CouchBaseResearch.Tests.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Ninject">
       <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject.Extensions.Conventions">
+      <HintPath>..\packages\Ninject.Extensions.Conventions.3.0.0.11\lib\net45-full\Ninject.Extensions.Conventions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
