--- a/MVC/4/CouchBaseResearch/CouchBaseResearch.Tests/CouchBaseResearch.Tests.csproj
+++ b/MVC/4/CouchBaseResearch/CouchBaseResearch.Tests/CouchBaseResearch.Tests.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestContext.cs" />
     <Compile Include="UnitTestBeerSampleBucket.cs" />
   </ItemGroup>
   <ItemGroup>
