--- a/CodeSandbox/CodeSandbox/CodeSandbox.csproj
+++ b/CodeSandbox/CodeSandbox/CodeSandbox.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9102755B-4793-4A41-8B28-E6C020E16789}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Chapter_02_GarbageCollector</RootNamespace>
-    <AssemblyName>Chapter_02_GarbageCollector</AssemblyName>
+    <RootNamespace>CodeSandbox</RootNamespace>
+    <AssemblyName>CodeSandbox</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Chapter_02_GarbageCollector.LargeMemoryUsage</StartupObject>
+    <StartupObject>CodeSandbox.LargeMemoryUsage</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
