--- a/CodeSandbox/CodeSandbox/CodeSandbox.csproj
+++ b/CodeSandbox/CodeSandbox/CodeSandbox.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CodeSandbox.LargeMemoryUsage</StartupObject>
+    <StartupObject>CodeSandbox.JitCall</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AllocateAndRelease.cs" />
+    <Compile Include="JitCall.cs" />
     <Compile Include="Pinning.cs" />
     <Compile Include="LargeMemoryUsage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
