--- a/CodeSandbox/CodeSandbox/CodeSandbox.csproj
+++ b/CodeSandbox/CodeSandbox/CodeSandbox.csproj
@@ -32,12 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CodeSandbox.Partitioning.Tester</StartupObject>
+    <StartupObject>CodeSandbox.Tpl</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AllocateAndRelease.cs" />
@@ -49,6 +50,7 @@
     <Compile Include="Pinning.cs" />
     <Compile Include="LargeMemoryUsage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
