--- a/AngularDemo/AngularDemo/AngularDemo.csproj
+++ b/AngularDemo/AngularDemo/AngularDemo.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-cyborg.css" />
+    <Content Include="Content\bootstrap-cyborg.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
