--- a/bonvivaui/bonvivaui/package.json
+++ b/bonvivaui/bonvivaui/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/http": "^7.2.15",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
@@ -24,9 +25,13 @@
     "@material/button": "^1.0.1",
     "@material/elevation": "^4.0.0",
     "@material/textfield": "^1.0.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "http": "0.0.0",
     "material-components-web": "^4.0.0",
-    "rxjs": "~6.4.0",
+    "mongoose": "^5.7.12",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
